Fix header spacing

--- a/app/assets/stylesheets/topics/laptop.css
+++ b/app/assets/stylesheets/topics/laptop.css
@@ -3,16 +3,11 @@
    ========================= */
 .laptop-container {
   .topics {
-    /* Header Layout */
-    .page-header-row {
-      margin-bottom: 1em;
-    }
-
     .page-header-container {
       display: flex;
       align-items: flex-start;
       gap: 1.2em;
-      margin-bottom: 1em;
+      margin-bottom: 0.5em;
     }
 
     .builder-logo-container {
